--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
         jvmTarget = '1.8'
     }
 
+    buildFeatures{
+        dataBinding = true
+        viewBinding = true
+    }
+
     buildFeatures {
         viewBinding = true
         dataBinding = true
