--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,52 +50,33 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation 'androidx.fragment:fragment-ktx:1.5.5'
-    implementation 'com.google.dagger:hilt-android:2.38.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
+    implementation 'com.google.dagger:hilt-android:2.40.5'
+    kapt 'com.google.dagger:hilt-android-compiler:2.40.5'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation "androidx.activity:activity-ktx:1.6.1"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
-    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
-    implementation 'androidx.fragment:fragment-ktx:1.5.4'
-
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.3'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-
-    // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.20"
 
     //Room
     implementation "androidx.room:room-ktx:2.2.0"
     kapt "androidx.room:room-compiler:2.2.0"
-    androidTestImplementation "androidx.room:room-testing:2.2.0"
 
     // moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
