--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.SWORD"
         tools:targetApi="31">
         <activity
-            android:name=".weather.ui.MainActivity"
+            android:name=".weather.ui.weather.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
