--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.muhammed.akakce"
+        applicationId "com.muhammed.sword"
         minSdk 27
         targetSdk 33
         versionCode 1
